# RalFlight

./: .clang-format  .gitignore  Build.bat  Build.sh  CMakeLists.txt  README.md  RalFlight.pro
CMake/: Config.cmake  Config.example.cmake  FindDX12Directory.cmake  FindVulkanDirectory.cmake  Macro.cmake  MinBuildVersion.cmake
Src/: CMakeLists.txt  Src.pro
Src/Core/: CMakeLists.txt  Core.pro
Src/Core/Container/: List.h  LockFreeQueue.h  Vector.h
Src/Core/FileSystem/: Directory.cpp  Directory.h  DirectoryStatus.cpp  DirectoryStatus.h  File.cpp  File.h  Path.cpp  Path.h  PathStatus.cpp  PathStatus.h
Src/Core/FileSystem/DeepIterator/: DeepIterator.cpp  DeepIterator.h
Src/Core/FileSystem/File/: File.cpp  File.h
Src/Core/FileSystem/FileState/: FileState.cpp  FileState.h
Src/Core/FileSystem/FileSystem/: FileSystem.cpp  FileSystem.h
Src/Core/FileSystem/Path/: Path.cpp  Path.h
Src/Core/FileSystem/PathIterator/: PathIterator.cpp  PathIterator.h
Src/Core/FileSystem/PathState/: PathState.cpp  PathState.h
Src/Core/Filesystem/Path/: Path.cpp  Path.h
Src/Core/Global/: .gitignore  CMakeLists.txt  Global.h  Global.in.h  Macro.h  Macro.h.in  Token.h  VersionInfo.in.h
Src/Core/Global/FunctionPointer/: FunctionPointer.h
Src/Core/Global/Macro/: Macro.h
Src/Core/Log/: Log.cpp  Log.h  LogRecoder.cpp  LogRecoder.h  StackTracer.cpp  StackTracer.h
Src/Core/Math/: CMakeLists.txt  Mat2.cpp  Mat2.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  MatrixHelper.cpp  MatrixHelper.h  Scalar.cpp  Scalar.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
Src/Core/Math/Mat2/: Mat2.cpp  Mat2.h
Src/Core/Math/Mat3/: Mat3.cpp  Mat3.h
Src/Core/Math/Mat4/: Mat4.cpp  Mat4.h
Src/Core/Math/Scalar/: Scalar.cpp  Scalar.h
Src/Core/Math/Vec2/: Vec2.cpp  Vec2.h
Src/Core/Math/Vec3/: Vec3.cpp  Vec3.h
Src/Core/Math/Vec4/: Vec4.cpp  Vec4.h
Src/Core/Memory/: DefaultPointerDeleter.h  Malloc.cpp  Malloc.h  MemoryPool.cpp  MemoryPool.h  SharedPointer.h  UniquePointer.h
Src/Core/Plugin/LibraryLoader/: LibraryLoader.cpp  LibraryLoader.h
Src/Core/Plugin/PluginLoader/: PluginLoader.cpp  PluginLoader.h
Src/Core/STD/Iterator/: Iteartor.h
Src/Core/STD/String/: String.cpp  String.h
Src/Core/STL/: CMakeLists.txt  Char.cpp  Char.h  Iteartor.h  Iterator.cpp  IteratorBase.h  Map.cpp  Map.h  Queue.cpp  Queue.h  SharedPointer.h  String.cpp  String.h  StringEncode.cpp  StringEncode.h  UniquePointer.cpp  UniquePointer.h
Src/Core/String/: Char.cpp  Char.h  CharReference.cpp  CharReference.h  ConstStringIterator.cpp  ConstStringIterator.h  Convertor.cpp  Convertor.h  RegEx.cpp  RegEx.h  RegExTraits.cpp  RegExTraits.h  String.cpp  String.h  StringEncode.cpp  StringEncode.h  StringIterator.cpp  StringIterator.h
Src/Core/Thread/: CMakeLists.txt  Mutex.cpp  Mutex.h  ReadWriteLock.cpp  ReadWriteLock.h  Runnable.cpp  Runnable.h  RunnableBase.cpp  RunnableBase.h  SafeQueue.h  Thread.cpp  Thread.h  ThreadBase.cpp  ThreadBase.h  ThreadPool.cpp  ThreadPool.h
Src/Core/Thread/Thread/: Thread.cpp  Thread.h
Src/Core/Time/: Clock.cpp  Clock.h  Date.cpp  Date.h  HiresClock.cpp  HiresClock.h  Timer.cpp  Timer.h
Src/SoundPAL/: CMakeLists.txt
Src/SoundPAL/Format/: Format.h  FormatWav.cpp  FormatWav.h
Src/SoundPAL/Global/: Global.h  Token.h
Src/Test/: CMakeLists.txt
Src/Test/Math/: Mat2.cpp  Mat3.cpp  Mat4.cpp  Module.cpp  Vec2.cpp
